--- a/styles/gamestyles.css
+++ b/styles/gamestyles.css
@@ -1,3 +1,7 @@
+body {
+    overflow: hidden;
+}
+
 .gameScreen {
     display: flex;
     flex-direction: column;
@@ -31,6 +35,7 @@
     width:100%;
     height: 100%;
     z-index: 2;
+    pointer-events: none; /* Add this line */
 }
 
 #hud {
@@ -74,5 +79,10 @@
     font-size: 2em;
     text-align: center;
     margin: 10px;
+}
+
+#duck {
+    position: absolute;
+    width: 100px;
 }
 
