--- a/styles/menustyles.css
+++ b/styles/menustyles.css
@@ -12,7 +12,7 @@
     flex-direction: column;
     align-items: center;
     min-height: 100vh;
-    background: url(/resources/sprites/background/sky1.png);
+    background: #63ADFF;
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -22,7 +22,7 @@
     flex-direction: column;
     align-items: center;
     min-height: 100vh;
-    background: url(/resources/sprites/background/sky1.png);
+    background: #63ADFF;
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -61,7 +61,7 @@
     margin: 10px;
     gap: 10px;
     font-size: 2em;
-    background: url(/resources/sprites/background/sky1.png);
+    background: #63ADFF;
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -73,7 +73,7 @@
     align-items: center;
     justify-content: center;
     margin: auto;
-    background: url(/resources/sprites/background/sky1.png);
+    background: #63ADFF;
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -112,11 +112,23 @@
 
 .pauseMenu {
     display: flex;
-    text-align: center;
     flex-direction: column;
-    margin: 10px;
-    gap: 10px;
-    font-size: 2em;
+    align-items: center;
+    min-height: 100vh;
+    background: #63ADFF;
+    background-size: cover;
+    background-repeat: no-repeat;
+    align-items: center;
+    justify-content: center;
+}
+
+.pauseMenu > div {
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    gap: 20px;
 }
 
 .pauseMenu button {
