--- a/styles/menustyles.css
+++ b/styles/menustyles.css
@@ -114,17 +114,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    width: 100%;
     min-height: 100vh;
     background: #63ADFF;
     background-size: cover;
     background-repeat: no-repeat;
-    align-items: center;
-    justify-content: center;
 }
 
 .pauseMenu > div {
     margin: auto;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 20px;
@@ -132,13 +133,126 @@
 }
 
 .pauseMenu button {
-    padding: 10px;
-    font-size: 1em;
-    border-radius: 10px;
-    color: #587498;
+    position: relative;
+    padding: 12px 32px;
+    font-size: 16px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #000;
+    border: none;
+    border-radius: 50px;
+    overflow: hidden;
+    z-index: 1;
+    transition: all 0.3s ease-in-out;
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
 }
 
 .pauseMenu button:hover {
-    background-color: #587498;
-    color: white;
+    transform: scale(1.05);
+    color: #fff;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.pauseMenu button:active {
+    transform: scale(0.9);
+  }
+  
+.pauseMenu button::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right, #587498, #587498);
+    transition: all 0.4s ease-in-out;
+    z-index: -1;
+    border-radius: 50px;
+  }
+  
+.pauseMenu button:hover::before {
+    right: 0;
+  }
+
+#shop img {
+    height: 2em;
+    width: 2em;
+    margin-right: 0.5em;
+}
+
+#shopView {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    min-height: 100vh;
+    background: #63ADFF;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#shopView > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    gap: 20px;
+}
+
+.item > p {
+    font-size: 1em;
+    gap: 5px;
+    padding: 5px;
+    color: #19191a;
+}
+
+#shopView button {
+    position: relative;
+    padding: 12px 32px;
+    font-size: 16px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #000;
+    border: none;
+    border-radius: 50px;
+    overflow: hidden;
+    z-index: 1;
+    transition: all 0.3s ease-in-out;
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+
+#shopView button:hover {
+    transform: scale(1.05);
+    color: #fff;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+#shopView button:active {
+    transform: scale(0.9);
+  }
+  
+#shopView button::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right, #587498, #587498);
+    transition: all 0.4s ease-in-out;
+    z-index: -1;
+    border-radius: 50px;
+  }
+  
+#shopView button:hover::before {
+    right: 0;
+  }
+
+.item img {
+    width: 80px;  
+    height: 80px;
 }
