--- a/styles/gamestyles.css
+++ b/styles/gamestyles.css
@@ -81,5 +81,29 @@ body {
     margin: 10px;
 }
 
+#bullet-time-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    background-color: red;
+    margin-top: 30px;
+}
 
+#bullet-time-title {
+    align-self: center;
+}
 
+#bars-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    gap: 5px;
+}
+
+.bullet-time-bar {
+    background-color: white;
+    width: 18%;
+    height: 20px;
+}
