--- a/styles/menustyles.css
+++ b/styles/menustyles.css
@@ -213,6 +213,19 @@
     gap: 20px;
 }
 
+.pauseTitle h1 {
+    display: flex;
+    align-self: center;
+    font-size: 5rem;
+    text-align: center;
+    margin: 10px;
+    color: #E86850;
+    width: 60vw;
+    min-height: 35vh;
+    align-items: center;
+    justify-content: center;
+}
+
 .pauseMenu button {
     position: relative;
     padding: 12px 32px;
@@ -274,14 +287,35 @@
     background-repeat: no-repeat;
 }
 
-#shopView > div {
+.shopTitle h1 {
     display: flex;
-    flex-direction: column;
+    align-self: center;
+    font-size: 5rem;
+    text-align: center;
+    margin: 10px;
+    color: #E86850;
+    width: 60vw;
+    min-height: 35vh;
     align-items: center;
     justify-content: center;
-    padding: 20px;
-    gap: 20px;
 }
+
+.shopItems {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+  .item {
+    flex: 0 0 calc(25% - 5px);
+    margin: 8px; 
+  }
+  
+  .shopExit {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
 
 .item > p {
     font-size: 1em;
@@ -392,11 +426,12 @@
   }
 
 /* Difficulty levels css style */
+
 div input[type="radio"] {
     display: none;
   }
   
-  div label {
+div label {
     display: flex;
     align-items: center;
     padding: 10px;
@@ -409,7 +444,7 @@ div input[type="radio"] {
     transition: all 0.3s ease-in-out;
   }
   
-  div label:before {
+div label:before {
     content: "";
     display: block;
     position: absolute;
@@ -424,12 +459,12 @@ div input[type="radio"] {
     transition: all 0.3s ease-in-out;
   }
   
-  div input[type="radio"]:checked + label:before {
+div input[type="radio"]:checked + label:before {
     background-color: green;
     top: 0;
   }
   
-  div input[type="radio"]:checked + label {
+div input[type="radio"]:checked + label {
     background-color: royalblue;
     color: #fff;
     border-color: rgb(129, 235, 129);
