--- a/styles/gamestyles.css
+++ b/styles/gamestyles.css
@@ -54,8 +54,13 @@ body {
     border: 5px solid black;
 }
 
-.hit {
+.hit-bullet-time-container > *{
     border: 5px solid black;
+    
+}
+
+.hit {
+    /* border: 5px solid black; */
     grid-column: 2/3;
     min-height: 96px;
 }
@@ -85,25 +90,23 @@ body {
 #bullet-time-container {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100%;
-    background-color: red;
+    min-height: 66px;;
     margin-top: 30px;
+    align-items: center;
 }
 
-#bullet-time-title {
+/* #bullet-time-title {
     align-self: center;
-}
-#bars-container {
+} */
+
+/* #bars-container {
     display: flex;
     justify-content: center;
     margin-top: 20px;
     margin-bottom: 20px;
     gap: 5px;
-}
-.bullet-time-bar {
-    background-color: white;
-    width: 18%;
-    height: 20px;
-}
+} */
+
 
