--- a/styles/gamestyles.css
+++ b/styles/gamestyles.css
@@ -46,23 +46,53 @@ body {
     height: 180px;
     z-index: 3;
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 0.5fr 1fr 0.5fr;
     gap: 10px;
-}
-
-.bullets {
-    border: 5px solid black;
+    align-items: center;
+    justify-content: center;
 }
 
 .hit {
-    border: 5px solid black;
+    border: 10px solid black;
+    align-items: center;
+    justify-content: center;
+    justify-self: center;
+    text-align: center;
     grid-column: 2/3;
-    min-height: 96px;
-}
+    min-height: 90px;
+    background: rgb(198, 178, 178);
+    border-radius: 60px;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  }
 
 .score {
-    border: 5px solid black;
-}
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 10px solid black;
+    justify-self: center;  
+    text-align: center;
+    width: 400px;
+    height: 200px;
+    background: rgb(198, 178, 178);
+    border-radius: 60px;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  }
+
+  .bullets {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border: 10px solid black;
+    justify-self: center;  
+    text-align: center;
+    width: 400px;
+    height: 200px;
+    background: rgb(198, 178, 178);
+    border-radius: 60px;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  }
 
 .bullet {
     width: auto;
@@ -86,9 +116,12 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    border: 10px solid black;
     width: 100%;
-    background-color: red;
-    margin-top: 30px;
+    background-color: rgb(231, 84, 84);
+    margin-top: 25px 0;
+    border-radius: 60px;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
 #bullet-time-title {
@@ -106,8 +139,6 @@ body {
     width: 18%;
     height: 20px;
 }
-
-
 
 #bullet-time-title {
     align-self: center;
