--- a/styles/gamestyles.css
+++ b/styles/gamestyles.css
@@ -108,7 +108,8 @@ body {
 .hudDuck {
     width: auto;
     height: 50px;
-    margin: 10px;
+    margin: 5px;
+    padding: 0;
 }
 
 #score {
@@ -122,9 +123,16 @@ body {
     flex-direction: column;
     justify-content: space-around;
     width: 100%;
-    min-height: 66px;;
+    min-height: 66px;
     margin-top: 30px;
     align-items: center;
+}
+
+.matrix {
+    background: url(/resources/sprites/background/matrix.gif);
+    background-repeat: no-repeat;
+    background-size: cover;
+    mix-blend-mode: normal;
 }
 
 
