fixed issues in css in settings, pause menu and shop

--- a/styles/gamestyles.css
+++ b/styles/gamestyles.css
@@ -54,7 +54,7 @@ body {
 
 
 .hit-bullet-time-container > *{
-    border: 5px solid black; 
+    border: 10px solid black; 
 }
 
 .hit {
@@ -63,6 +63,7 @@ body {
     justify-content: center;
     justify-self: center;
     text-align: center;
+    padding-top: 10px;
     grid-column: 2/3;
     min-height: 90px;
     background: rgb(198, 178, 178);
