--- a/styles/menustyles.css
+++ b/styles/menustyles.css
@@ -83,7 +83,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 10px;
+    margin: auto;
     background: #63ADFF;
     background-size: cover;
     background-repeat: no-repeat;
@@ -225,8 +225,9 @@
 }
 
 .pauseMenu button {
+    display: flex;
     position: relative;
-    padding: 12px 32px;
+    padding: auto;
     font-size: 16px;
     font-weight: 700;
     text-transform: uppercase;
@@ -238,6 +239,18 @@
     transition: all 0.3s ease-in-out;
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
     cursor: pointer;
+    width: 300px;
+    height: 100px;
+    align-items: center;
+    justify-content: center;
+}
+
+.pauseButtons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
 }
 
 .pauseMenu button:hover {
@@ -287,10 +300,10 @@
 
 .shopTitle h1 {
     display: flex;
+    margin: auto;
     align-self: center;
     font-size: 5rem;
     text-align: center;
-    margin: 10px;
     color: #E86850;
     width: 60vw;
     min-height: 35vh;
@@ -298,15 +311,31 @@
     justify-content: center;
 }
 
+.shopControls {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    gap: 20px;
+    margin: auto;
+}
+
 .shopItems {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
   }
   
   .item {
     flex: 0 0 calc(25% - 5px);
-    margin: 8px; 
+    margin: 8px;
+    align-content: center; 
+    align-items: center; 
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
   }
   
   .shopExit {
