added crosshairs and centered them to all different weapons

--- a/styles/gamestyles.css
+++ b/styles/gamestyles.css
@@ -10,7 +10,7 @@ body {
     height: 100vh;
     background-color: #f5f5f5;
     position: relative;
-    cursor: crosshair;
+    cursor: url(/resources/sprites/crosshairs/pistolSight.png) 12 12, auto;
 }
 
 #sky, #grass {
